<resources>
    <string name="app_name">Magnetic Sensor MVVM</string>
    <string name="magneticText_app">"@UnalTodosAlaU2024"</string>
    <string name="start_button_text">Comenzar</string>
    <string name="total_magnetic_field">Campo Magnético Total:</string>
    <string name="magnetic_field_x">Campo Magnético X:</string>
    <string name="magnetic_field_y">Campo Magnético Y:</string>
    <string name="magnetic_field_z">Campo Magnético Z:</string>
</resources>