<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:layout_marginTop="-80dp"
        android:src="@drawable/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerImage"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button_text" />

        <TextView
            android:id="@+id/magneticFieldTotalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_magnetic_field"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/magneticFieldTextViewX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/magnetic_field_x"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/magneticFieldTextViewY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/magnetic_field_y"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/magneticFieldTextViewZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/magnetic_field_z"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/footerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/magnetic_text_app"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
